--- a/lectures/07_random_effects.html
+++ b/lectures/07_random_effects.html
@@ -579,7 +579,7 @@ class="slide level2">
 <p><span class="math display">\[Y_i = \beta X_i +
 \epsilon_i\]</span><br />
 </p>
-<p><span class="math display">\[\epsilon \sim \mathcal{N}(0,
+<p><span class="math display">\[\epsilon_i \sim \mathcal{N}(0,
 \sigma^2)\]</span></p>
 <p><br />
 <br />
@@ -659,7 +659,7 @@ class="slide level2">
 <br />
 <span class="math display">\[Y_{ij} = \beta_{j} +
 \epsilon_i\]</span><br />
-<span class="math display">\[\epsilon \sim \mathcal{N}(0,
+<span class="math display">\[\epsilon_i \sim \mathcal{N}(0,
 \sigma^2)\]</span><br />
 
 <div class="fragment">
@@ -701,7 +701,7 @@ manifest<br />
 <span id="left">Fixed:</span><br />
 <span class="math display">\[Y_{ij} =  \beta_{j} +
 \epsilon_i\]</span><br />
-<span class="math display">\[\epsilon \sim \mathcal{N}(0,
+<span class="math display">\[\epsilon_i \sim \mathcal{N}(0,
 \sigma^2)\]</span><br />
 <br />
 
@@ -711,7 +711,7 @@ manifest<br />
 \epsilon_i\]</span><br />
 <span class="math display">\[\beta_{j} \sim \mathcal{N}(\beta,
 \sigma^2_{site})\]</span><br />
-<span class="math display">\[\epsilon \sim \mathcal{N}(0,
+<span class="math display">\[\epsilon_i \sim \mathcal{N}(0,
 \sigma^2)\]</span></p>
 </div>
 </section>
@@ -722,7 +722,7 @@ class="slide level2">
 \epsilon_i\]</span><br />
 <span class="math display">\[\beta_{j} \sim \mathcal{N}(\alpha,
 \sigma^2_{site})\]</span><br />
-<span class="math display">\[\epsilon \sim \mathcal{N}(0,
+<span class="math display">\[\epsilon_i \sim \mathcal{N}(0,
 \sigma^2)\]</span>
 <hr>
 <br />
@@ -732,7 +732,7 @@ class="slide level2">
 \epsilon_i\]</span><br />
 <span class="math display">\[\beta_{j} \sim \mathcal{N}(0,
 \sigma^2_{site})\]</span><br />
-<span class="math display">\[\epsilon \sim \mathcal{N}(0,
+<span class="math display">\[\epsilon_i \sim \mathcal{N}(0,
 \sigma^2)\]</span></p>
 </div>
 </section>
@@ -740,8 +740,8 @@ class="slide level2">
 class="slide level2">
 <h2>Consider what random effects mean - GLMM Notation</h2>
 <p>(yes, Generalized Linear Mixed Models - we will get there)</p>
-<p><span class="math display">\[\large \eta_{ij} =  \alpha + \beta_{j} +
-\epsilon_i\]</span><br />
+<p><span class="math display">\[\large \eta_{ij} =  \alpha +
+\beta_{j}\]</span><br />
 <span class="math display">\[\ \beta_{j} \sim \mathcal{N}(0,
 \sigma^2_{site})\]</span><br />
 <br />
