schedule update on causal

--- a/schedule_new.html
+++ b/schedule_new.html
@@ -437,7 +437,7 @@ To see the code of a lecture, load the slides, then change the file extension in
 <p>4/29/2019<br />
 <strong>Lecture:</strong> Causal Modeling<br />
 <strong>Readings:</strong> <a href="./Readings/Hernán_and_Healey_2019.pdf">A Second Change to Get Causal Inference Right</a>, <a href="./Readings/Larsen_et_al_2019.pdf">Causal analysis in control impact studies</a>, <a href="Pearl_2010_causal_inference.pdf">Pearl 2010</a><br />
-<strong>Additional Reading:</strong> <a href="https://www.hsph.harvard.edu/miguel-hernan/causal-inference-book/">Causal Inference</a></p>
+<strong>Further Reading:</strong> <a href="https://www.hsph.harvard.edu/miguel-hernan/causal-inference-book/">Causal Inference</a></p>
 </div>
 <div id="week-14." class="section level3">
 <h3>Week 14.</h3>
@@ -445,7 +445,7 @@ To see the code of a lecture, load the slides, then change the file extension in
 <!-- __Lecture:__ [Intro to Structural Equation Models](https://1drv.ms/p/s!AvOIsObbweOroNIqHiVxra6SIrp4gw), [Implementing Piecewise SEM](https://1drv.ms/f/s!AvOIsObbweOroNIitg7KpsLhgffJrw)  --> <strong>Lecture:</strong> <a href="https://www.dropbox.com/s/l7z6sbs16jk2y0s/23_SEM_Intro.pptx?dl=0">Intro to Structural Equation Models</a>, <a href="https://www.dropbox.com/s/j59oodlmcx53tiw/24_Estimation_in_SEM.pptx?dl=0">SEM Implementation</a><br />
 <strong>Etherpad:</strong> <a href="https://etherpad.wikimedia.org/p/609-sem-2019" class="uri">https://etherpad.wikimedia.org/p/609-sem-2019</a><br />
 <strong>Reading:</strong> <a href="http://byrneslab.net/classes/biol609/Grace_et_al-2012-Ecosphere.pdf">Grace et al 2012 Ecosphere</a>, <a href="./Readings/Lefcheck_2016_SEM.pdf">Lefcheck 2016</a><br />
-<strong>Additional Reading:</strong> <a href="https://jslefche.github.io/sem_book/">Notes from Jon Lefcheck</a><br />
+_<strong>Further Reading:</strong> <a href="https://jslefche.github.io/sem_book/">Notes from Jon Lefcheck</a><br />
 <strong>Helpful Websites:</strong> <a href="http://jslefche.github.io/piecewiseSEM/">piecewiseSEM</a>, <a href="http://lavaan.ugent.be/">lavaan</a>, <a href="https://www.usgs.gov/centers/wetland-and-aquatic-research-center/science/quantitative-analysis-using-structural-equation">Jim Grace’s Tutorials</a></p>
 </div>
 <div id="week-15." class="section level3">
