--- a/schedule.html
+++ b/schedule.html
@@ -302,8 +302,7 @@ link</a> for all of the code.</p>
 <p>1/23/2022<br />
 <strong>Lecture</strong>: <a href="lectures/01_intro.html">Why Advanced
 Data Analysis?</a>, <a
-href="lectures/02_Bayesian_Intro.html">Re-Introduction to
-Bayes</a><br />
+href="lectures/02_Bayesian_Intro.html">Introduction to Bayes</a><br />
 <strong>Reading:</strong> McElreath Ch. 1-2<br />
 <strong>Deeper Reading:</strong> <a
 href="https://www.bayesrulesbook.com/chapter-2">Bayes’ Rules</a><br />
