--- a/schedule.html
+++ b/schedule.html
@@ -306,6 +306,9 @@ href="lectures/02_Bayesian_Intro.html">Introduction to Bayes</a><br />
 <strong>Reading:</strong> McElreath Ch. 1-2<br />
 <strong>Deeper Reading:</strong> <a
 href="https://www.bayesrulesbook.com/chapter-2">Bayes’ Rules</a><br />
+<strong>Tidying Rethinking:</strong> <a
+href="https://bookdown.org/content/4857/small-worlds-and-large-worlds.html">Small
+Worlds and Large Worlds</a><br />
 <strong>Etherpad:</strong> <a
 href="https://etherpad.wikimedia.org/p/609-bayes-2024"
 class="uri">https://etherpad.wikimedia.org/p/609-bayes-2024</a></p>
@@ -316,14 +319,22 @@ class="uri">https://etherpad.wikimedia.org/p/609-bayes-2024</a></p>
 <strong>Lecture:</strong> <a
 href="./lectures/03_posterior_sampling.html">Sampling from your
 Posterior</a><br />
-<strong>Reading:</strong> McElreath Chapter 3.<br />
+<strong>Reading:</strong> McElreath Chapter 3, Sampling the
+Imaginary<br />
 <strong>Deeper Reading:</strong> <a
 href="https://www.bayesrulesbook.com/chapter-6">Approximating the
 Posterior</a>, <a
 href="https://m-clark.github.io/bayesian-basics/">Bayesian Basics</a>,
 <a href="https://www.bayesrulesbook.com/chapter-8">Posterior Inference
 and Prediction</a><br />
-<strong>Etherpad:</strong> <a
+<strong>Even Deeper Reading:</strong> <a
+href="http://www.stat.columbia.edu/~gelman/research/published/uncertainty_intervals.pdf">Are
+confidence intervals better termed ”uncertainty intervals”?</a>, <a
+href="https://www.cmu.edu/epp/people/faculty/research/Fischoff-Henrion-Assessing%20uncertainty%20in%20physical%20constants.pdf">Assessing
+uncertainty in physcial constants</a><br />
+<strong>Tidying Rethinking:</strong> <a
+href="https://bookdown.org/content/4857/sampling-the-imaginary.html#sampling-to-simulate-prediction">Sampling
+from your Posterior</a> <strong>Etherpad:</strong> <a
 href="https://etherpad.wikimedia.org/p/609-posteriors-2024"
 class="uri">https://etherpad.wikimedia.org/p/609-posteriors-2024</a></p>
 </div>
