--- a/schedule.html
+++ b/schedule.html
@@ -333,8 +333,9 @@ confidence intervals better termed ”uncertainty intervals”?</a>, <a
 href="https://www.cmu.edu/epp/people/faculty/research/Fischoff-Henrion-Assessing%20uncertainty%20in%20physical%20constants.pdf">Assessing
 uncertainty in physcial constants</a><br />
 <strong>Tidying Rethinking:</strong> <a
-href="https://bookdown.org/content/4857/sampling-the-imaginary.html#sampling-to-simulate-prediction">Sampling
-from your Posterior</a> <strong>Etherpad:</strong> <a
+href="https://bookdown.org/content/4857/sampling-the-imaginary.html">Sampling
+from your Posterior</a><br />
+<strong>Etherpad:</strong> <a
 href="https://etherpad.wikimedia.org/p/609-posteriors-2024"
 class="uri">https://etherpad.wikimedia.org/p/609-posteriors-2024</a></p>
 </div>
