Remove clark for now

--- a/schedule.html
+++ b/schedule.html
@@ -323,10 +323,10 @@ Posterior</a><br />
 Imaginary<br />
 <strong>Deeper Reading:</strong> <a
 href="https://www.bayesrulesbook.com/chapter-6">Approximating the
-Posterior</a>, <a
-href="https://m-clark.github.io/bayesian-basics/">Bayesian Basics</a>,
-<a href="https://www.bayesrulesbook.com/chapter-8">Posterior Inference
-and Prediction</a><br />
+Posterior</a>,
+<!-- [Bayesian Basics](https://m-clark.github.io/bayesian-basics/), --><a
+href="https://www.bayesrulesbook.com/chapter-8">Posterior Inference and
+Prediction</a><br />
 <strong>Even Deeper Reading:</strong> <a
 href="http://www.stat.columbia.edu/~gelman/research/published/uncertainty_intervals.pdf">Are
 confidence intervals better termed ”uncertainty intervals”?</a>, <a
