--- a/schedule.html
+++ b/schedule.html
@@ -306,6 +306,9 @@ href="lectures/02_Bayesian_Intro.html">Introduction to Bayes</a><br />
 <strong>Reading:</strong> McElreath Ch. 1-2<br />
 <strong>Deeper Reading:</strong> <a
 href="https://www.bayesrulesbook.com/chapter-2">Bayes’ Rules</a><br />
+<strong>Even Deeper Reading:</strong> <a
+href="https://m-clark.github.io/bayesian-basics/">Bayesian
+Basics</a><br />
 <strong>Tidying Rethinking:</strong> <a
 href="https://bookdown.org/content/4857/small-worlds-and-large-worlds.html">Small
 Worlds and Large Worlds</a><br />
@@ -323,8 +326,7 @@ Posterior</a><br />
 Imaginary<br />
 <strong>Deeper Reading:</strong> <a
 href="https://www.bayesrulesbook.com/chapter-6">Approximating the
-Posterior</a>,
-<!-- [Bayesian Basics](https://m-clark.github.io/bayesian-basics/), --><a
+Posterior</a>, <a
 href="https://www.bayesrulesbook.com/chapter-8">Posterior Inference and
 Prediction</a><br />
 <strong>Even Deeper Reading:</strong> <a
