--- a/schedule.html
+++ b/schedule.html
@@ -337,6 +337,8 @@ uncertainty in physcial constants</a><br />
 <strong>Tidying Rethinking:</strong> <a
 href="https://bookdown.org/content/4857/sampling-the-imaginary.html">Sampling
 from your Posterior</a><br />
+<strong>Thursday Problems:</strong> <a
+href="lab/sampling.html">sampling</a><br />
 <strong>Etherpad:</strong> <a
 href="https://etherpad.wikimedia.org/p/609-posteriors-2024"
 class="uri">https://etherpad.wikimedia.org/p/609-posteriors-2024</a></p>
