adding linear model lab

--- a/schedule.html
+++ b/schedule.html
@@ -363,9 +363,12 @@ href="https://github.com/noamross/gam-resources">Resources for Learning
 about GAMs in R</a><br />
 <strong>Tidying Rethinking:</strong> <a
 href="https://bookdown.org/content/4857/geocentric-models.html">Geocentric
-Models</a>. <strong>Etherpad:</strong> <a
+Models</a><br />
+<strong>Etherpad:</strong> <a
 href="https://etherpad.wikimedia.org/p/609-linreg-2024"
-class="uri">https://etherpad.wikimedia.org/p/609-linreg-2024</a></p>
+class="uri">https://etherpad.wikimedia.org/p/609-linreg-2024</a><br />
+<strong>Lab:</strong> <a href="lab/linear.html">Linear Bayesian
+Models</a></p>
 </div>
 <div id="week-4." class="section level3">
 <h3>Week 4.</h3>
@@ -373,10 +376,14 @@ class="uri">https://etherpad.wikimedia.org/p/609-linreg-2024</a></p>
 <strong>Lecture:</strong> <a
 href="./lectures/14_multiple_predictors.html">Multiple Predictor
 Variables</a>,<br />
-<strong>Reading:</strong> McElreath Chapter 5 - 6<br />
+<strong>Reading:</strong> McElreath Chapter 5, Skim Ch. 6 (we did this
+in 607)<br />
 <strong>Deeper Reading:</strong> <a
 href="https://www.bayesrulesbook.com/chapter-11">Extending the Normal
-Regression Model</a>.<br />
+Regression Model</a><br />
+<strong>Tidying Rethinking:</strong> <a
+href="https://bookdown.org/content/4857/the-many-variables-the-spurious-waffles.html">The
+Many Variables and Spurious Waffles</a><br />
 <strong>Etherpad:</strong> <a
 href="https://etherpad.wikimedia.org/p/609-multiple_predictors-2024"
 class="uri">https://etherpad.wikimedia.org/p/609-multiple_predictors-2024</a></p>
@@ -392,7 +399,9 @@ href="http://izt.ciens.ucv.ve/ecologia/Archivos/ECO_POB%202014/ECOPO2_2014/Aho%2
 et al 2013 Ecology</a>, <a
 href="http://link.springer.com/article/10.1007/s11222-013-9416-2">Gelman
 et al. 2013 on WAIC and LOO</a><br />
-<strong>Etherpad:</strong> <a
+<strong>Tidying Rethinking:</strong> <a
+href="https://bookdown.org/content/4857/ulysses-compass.html">Ulysses
+Compass</a> <strong>Etherpad:</strong> <a
 href="https://etherpad.wikimedia.org/p/609-mmi-2024"
 class="uri">https://etherpad.wikimedia.org/p/609-mmi-2024</a></p>
 </div>
