add lab for multiple predictors

--- a/schedule.html
+++ b/schedule.html
@@ -383,7 +383,9 @@ href="https://www.bayesrulesbook.com/chapter-11">Extending the Normal
 Regression Model</a><br />
 <strong>Tidying Rethinking:</strong> <a
 href="https://bookdown.org/content/4857/the-many-variables-the-spurious-waffles.html">The
-Many Variables and Spurious Waffles</a><br />
+Many Variables and Spurious Waffles</a> <strong>Lab:</strong> <a
+href="lab/multiple_predictors.html">Multiple Predictors with
+Rethinking</a><br />
 <strong>Etherpad:</strong> <a
 href="https://etherpad.wikimedia.org/p/609-multiple_predictors-2024"
 class="uri">https://etherpad.wikimedia.org/p/609-multiple_predictors-2024</a></p>
