Clarify lab language.

--- a/lab/multiple_predictors.html
+++ b/lab/multiple_predictors.html
@@ -79,7 +79,7 @@ ul.task-list li input[type="checkbox"] {
 <li>area: Size of the territory</li>
 <li>weight: Body weight of the individual fox</li>
 </ol>
-<p>5H2. Fit a multiple linear regression with weight as the outcome and both area and group size as predictor variables. You can standardize the variables if you wish. Plot the predictions of the model for each predictor, holding the other predictor constant at its mean. Use <code>tidybayes</code> and <code>tidybayes.rethinking</code> for this with either the <code>tidy_draws()</code> function or <code>linpred_draws()</code>. What does this model say about the importance of each variable?</p>
+<p>5H2. Fit a multiple linear regression with weight as the outcome and both area and group size as predictor variables. You can standardize the variables if you wish. Plot the predictions of the model for each predictor, holding the other predictor constant at its mean. Use <code>tidybayes</code> and <code>tidybayes.rethinking</code> for this with <code>linpred_draws()</code>. What does this model say about the importance of each variable?</p>
 </section>
 <section id="categoricals" class="level2">
 <h2 class="anchored" data-anchor-id="categoricals">Categoricals</h2>
