update lab to make sure they get some dagitty in

--- a/lab/multiple_predictors.html
+++ b/lab/multiple_predictors.html
@@ -65,6 +65,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="models-from-mcelreath" class="level1">
 <h1>Models from McElreath</h1>
 <p>5E2. Write down a multiple regression to evaluate the claim: Animal diversity is linearly related to plant productivity (more food, more animal species), but only after controlling for latitude. Assume these are z-standardized variables. You just need to write down the model definition. Stretch your wings by doing this in markdown with LaTeX. See <a href="https://biostats-r.github.io/biostats/quarto/04-figures-tables.html#equations">here</a>, <a href="https://qmd4sci.njtierney.com/math">here</a>, and <a href="https://editor.codecogs.com/?lang=en-us">this little cheat</a>.</p>
+<p>Draw the DAG with <a href="https://biol607.github.io/lab/dagitty.html">dagitty</a> and the <code>rethinking::drawdag()</code> function.</p>
 </section>
 <section id="some-conceptual-thoughts-from-mcelreath" class="level1">
 <h1>Some Conceptual Thoughts from McElreath</h1>
