[Accessibility] Addressed multiple accessibility issues for the home page.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en-US">
 
 <head>
 
@@ -238,7 +238,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"></a>
+      <a class="navbar-brand" href="index.html" aria-label="Navigation Bar"></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -287,7 +287,7 @@ Biology</h1>
 </div>
 
 
-<p><img src="index_files/figure-html/demoplot-1.png" width="576" style="display: block; margin: auto;" /></p>
+<p><img src="index_files/figure-html/demoplot-1.png" alt="Demo Plots" width="576" style="display: block; margin: auto;" /></p>
 <p><strong>Instructor:</strong> Jarrett Byrnes, PhD.</p>
 <p><strong>Email:</strong> <a href="mailto:jarrett.byrnes@umb.edu"
 class="email">jarrett.byrnes@umb.edu</a></p>
@@ -302,7 +302,7 @@ class="uri">https://github.com/biol609/biol609.github.io/</a>  <br />
 <div id="course-news" class="section level2">
 <h2>Course News:</h2>
 <p><em>1/25/24</em> Welcome to the class! Please browse around the site
-or download the olde <a
+or download the olde <a STYLE="text-decoration:underline"
 href="./syllabus/adv_data_analysis_syllabus_2016a.doc">syllabus</a>!</p>
 </div>
 
