--- a/schedule.html
+++ b/schedule.html
@@ -393,7 +393,7 @@ class="uri">https://etherpad.wikimedia.org/p/609-multiple_predictors-2024</a></p
 <div id="week-5." class="section level3">
 <h3>Week 5.</h3>
 <p>2/20/2022<br />
-<strong>Lecture:</strong> <a href="./lectures/15_mmi.html">Bayesian
+<strong>Lecture:</strong> <a href="./lectures/mmi.html">Bayesian
 Multimodel Inference</a><br />
 <strong>Reading:</strong> McElreath Chapter 7<br />
 <strong>Deeper Reading:</strong> <a
