fix björk image

--- a/lectures/mmi.html
+++ b/lectures/mmi.html
@@ -399,7 +399,7 @@ Information Theory and a Multimodel World
 </h2>
 </center>
 
-<img data-src="./images/15/angry-bjork-and-if-you-overfit-once-more-youll-me-an-army-of-aic.jpg" style="width:60.0%" class="r-stretch"></section>
+<img data-src="./images/15/army_of_aic.jpg" style="width:60.0%" class="r-stretch"></section>
 
 <section id="how-complex-a-model-do-you-need-to-be-useful" class="title-slide slide level1 center">
 <h1>How complex a model do you need to be useful?</h1>
