--- a/schedule.html
+++ b/schedule.html
@@ -403,7 +403,10 @@ href="http://link.springer.com/article/10.1007/s11222-013-9416-2">Gelman
 et al. 2013 on WAIC and LOO</a><br />
 <strong>Tidying Rethinking:</strong> <a
 href="https://bookdown.org/content/4857/ulysses-compass.html">Ulysses
-Compass</a> <strong>Etherpad:</strong> <a
+Compass</a><br />
+<strong>Lab:</strong> <a href="lab/mmi.html">MultiModel Inference with
+Rethinking</a><br />
+<strong>Etherpad:</strong> <a
 href="https://etherpad.wikimedia.org/p/609-mmi-2024"
 class="uri">https://etherpad.wikimedia.org/p/609-mmi-2024</a></p>
 </div>
