new mcmc/hmc lecture

--- a/schedule.html
+++ b/schedule.html
@@ -414,15 +414,15 @@ class="uri">https://etherpad.wikimedia.org/p/609-mmi-2024</a></p>
 <h3>Week 6.</h3>
 <p>2/27/2022<br />
 <strong>Lecture:</strong> <a
-href="./lectures/16_interactions.html">Interaction Effects</a>, <a
-href="./lectures/17_mcmc.html">Markov Chain Monte-Carlo
-Approaches</a><br />
+href="./lectures/mcmc_and_hmc.html">Hamiltonian and Markov Chain
+Monte-Carlo Approaches</a><br />
 <strong>Reading:</strong> McElreath Chapter 8-9<br />
 <strong>Deeper Reading:</strong> <a
-href="https://www.bayesrulesbook.com/chapter-7">MCMC Under the Hood</a>.
+href="https://www.bayesrulesbook.com/chapter-7">MCMC Under the
+Hood</a><br />
 <strong>Etherpad:</strong> <a
-href="https://etherpad.wikimedia.org/p/609-interactions-2024"
-class="uri">https://etherpad.wikimedia.org/p/609-interactions-2024</a></p>
+href="https://etherpad.wikimedia.org/p/609-hmc-2024"
+class="uri">https://etherpad.wikimedia.org/p/609-hmc-2024</a></p>
 </div>
 <div id="week-7." class="section level3">
 <h3>Week 7.</h3>
