Update with HMC lab

--- a/schedule.html
+++ b/schedule.html
@@ -420,6 +420,8 @@ Monte-Carlo Approaches</a><br />
 <strong>Deeper Reading:</strong> <a
 href="https://www.bayesrulesbook.com/chapter-7">MCMC Under the
 Hood</a><br />
+<strong>Lab:</strong> <a href="lab/mcmc_interaction.html">HMC and
+Interaction Effects</a><br />
 <strong>Etherpad:</strong> <a
 href="https://etherpad.wikimedia.org/p/609-hmc-2024"
 class="uri">https://etherpad.wikimedia.org/p/609-hmc-2024</a></p>
@@ -427,6 +429,8 @@ class="uri">https://etherpad.wikimedia.org/p/609-hmc-2024</a></p>
 <div id="week-7." class="section level3">
 <h3>Week 7.</h3>
 <p>3/6/2022<br />
+<strong>Lab:</strong> Split into 3 groups. One group presents logistic
+regression, one poisson regression, and one censored regression.<br />
 <strong>Lecture</strong>: <a
 href="lectures/09_generalized_linear_models.html">MaxEnt and GLMs - a
 review</a>, <a href="./lectures/10_bayesian_glm.html">Bayesian GLMs</a>,
