--- a/schedule.html
+++ b/schedule.html
@@ -434,8 +434,7 @@ class="uri">https://etherpad.wikimedia.org/p/609-hmc-2024</a></p>
 <h3>Week 8.</h3>
 <p>3/13/2022<br />
 <strong>Lecture</strong>: <a href="lectures/maxent_glm.html">MaxEnt and
-Bayesian GLMs</a>, <a href="./lectures/10_bayesian_glm.html">Bayesian
-GLMs</a><br />
+Bayesian GLMs</a><br />
 <strong>Lab:</strong> <a href="lectures/11_bayesian_glm_lab.html">GLM
 lab</a><br />
 <strong>Reading:</strong> McElreath Chapter 10-11. <strong>Deeper
