--- a/schedule.html
+++ b/schedule.html
@@ -13,7 +13,7 @@
 
 <title>Course Schedule and Readings</title>
 
-<script src="site_libs/header-attrs-2.25/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/lumen.min.css" rel="stylesheet" />
@@ -453,7 +453,7 @@ class="uri">https://etherpad.wikimedia.org/p/609-glm-2024</a></p>
 <h3>Week 9.</h3>
 <p>3/20/2022<br />
 <strong>Lecture:</strong> <a
-href="./lectures/12_overdisp.html">Overdispersed Models</a>, <a
+href="./lectures/overdisp.html">Overdispersed Models</a>, <a
 href="./lectures/13_zinfl.html">Zero Inflated Models</a><br />
 <strong>Reading:</strong> McElreath Chapter 12<br />
 <strong>Further Reading:</strong> <a
