Fix incorrect title and add overparameterization note.

--- a/lectures/autocorr.html
+++ b/lectures/autocorr.html
@@ -1226,7 +1226,8 @@ w_d \sim \mathcal{N}(0, 1) \\
 <li class="fragment"><p>If our predictors account for all variation, this <em>might</em> not be necessary.</p></li>
 <li class="fragment"><p>But, if we wish to account for other correlated drivers or autocorrelation in residuals, we have many options</p></li>
 <li class="fragment"><p>We can model K, the variance-covariance matrix with a MVN process.</p></li>
-<li class="fragment"><p>We can use a spline (computationally faster) that will approximate a Gaussian Process</p></li>
+<li class="fragment"><p>We can use a spline (computationally faster) that will approximate a Gaussian Process.</p></li>
+<li class="fragment"><p>But don’t forget about possible overparameterization…</p></li>
 </ul>
 </div>
 </section>
